fixed statistics, sections control

--- a/css/algorithm.less
+++ b/css/algorithm.less
@@ -35,7 +35,10 @@
       }
 
       .handle {
-        cursor: move;
+        .glyphicon {
+          // hide image, when not cursor
+          visibility: hidden;
+        }
       }
 
       .invalid {
