--- a/partials/home.phtml
+++ b/partials/home.phtml
@@ -4,6 +4,9 @@ global $l10n;
 
 // ask database for latest algorithms
 $algorithms = $__model->fetchLatestAlgorithms(NUMBER_OF_LATEST_ALGORITHMS);
+if (isset($__uid)) {
+    $my_algorithms = $__model->fetchAlgorithmsOfUser($__uid, true, 0, MAX_NUMBER_OF_ALGORITHMS);
+}
 require_once BASEDIR . "includes/viewHelper.php";
 ?>
     <!-- HEADER -->
@@ -20,8 +23,8 @@ require_once BASEDIR . "includes/viewHelper.php";
         </p>
     </div>
 
-<?php if ($algorithms): ?>
     <!-- CONTENT -->
+<?php if ($algorithms): ?>
     <table class="table table-striped table-hover algorithms">
         <thead>
         <tr>
@@ -45,6 +48,40 @@ require_once BASEDIR . "includes/viewHelper.php";
                 </span>
                     <?php if (!empty($algorithm['description'])): ?>
                         <span class="description"><?= skipDescription($algorithm['description']) ?></span>
+                    <?php endif ?>
+                </td>
+            </tr>
+        <?php endforeach ?>
+        </tbody>
+    </table>
+<?php endif ?>
+<?php if (isset($my_algorithms) && $my_algorithms): ?>
+    <table class="table table-striped table-hover algorithms">
+        <thead>
+        <tr>
+            <th><?= $l10n['my_algos'] ?></th>
+        </tr>
+        </thead>
+        <tbody>
+        <?php foreach ($my_algorithms as $algorithm): $link = url(['action' => 'view', 'aid' => $algorithm['aid']]) ?>
+            <tr>
+                <td>
+                    <?php if ($algorithm['age'] <= MAX_MINUTES_FOR_LABEL): ?>
+                        <span class="label label-default"><?= $l10n['label_new'] ?></span>
+                    <?php endif ?>
+                    <?php if (is_null($algorithm['date_publish'])): ?>
+                        <span class="label label-info">private</span>
+                    <?php endif ?>
+                    <span class="name">
+                            <a href="<?= $link ?>">
+                                <?= $algorithm['name'] ? $algorithm['name'] : $l10n['untitled_algorithm'] ?>
+                            </a>
+                        </span>
+                        <span class="properties">(<?= sprintf($l10n['created_at'], getTimeFrame($algorithm['age'])) ?>
+                            )</span>
+                    <?php if (!empty($algorithm['description'])): ?>
+                        <span
+                            class="description"><?= skipDescription($algorithm['description']) ?></span>
                     <?php endif ?>
                 </td>
             </tr>
