--- a/partials/index.phtml
+++ b/partials/index.phtml
@@ -8,114 +8,210 @@ require_once BASEDIR . "includes/viewHelper.php";
 $latestAlgorithms = $__model->fetchLatestAlgorithms(MAX_NUMBER_OF_ENTRIES);
 $lastChanges = $__model->fetchModifiedAlgorithms(MAX_NUMBER_OF_ENTRIES);
 $diligentUsers = $__model->fetchUsersWithMostAlgorithms(MAX_NUMBER_OF_ENTRIES);
+if (isset($__uid)) {
+    $my_algorithms = $__model->fetchAlgorithmsOfUser($__uid, true, 0, MAX_NUMBER_OF_ENTRIES);
+    $my_changes = $__model->fetchModifiedAlgorithmsOfUser($__uid, true, MAX_NUMBER_OF_ENTRIES);
+}
 ?>
-<!-- HEADER -->
-<div class="page-header">
-    <h1><?= $l10n['index'] ?>
-        <small><?= $l10n['all_algos'] ?></small>
-    </h1>
-</div>
-<!-- CONTENT -->
-<div class="col-md-4">
-    <!-- Latest algorithms -->
-    <table class="table table-striped table-hover algorithms">
-        <thead>
-        <tr>
-            <th><?= $l10n['latest_algos'] ?></th>
-        </tr>
-        </thead>
-        <tbody>
-        <?php if ($latestAlgorithms): ?>
-        <?php foreach ($latestAlgorithms as $algorithm):
-            $linkAlgorithm = url(['action' => 'view', 'aid' => $algorithm['aid']]);
-            $linkUser = url(['action' => 'user', 'uid' => $algorithm['uid']]);
-            ?>
-            <tr>
-                <td>
-                    <?php if ($algorithm['age'] <= MAX_MINUTES_FOR_LABEL): ?>
-                        <span class="label label-default"><?= $l10n['label_new'] ?></span>
-                    <?php endif ?>
-                    <span class="name"><a href="<?= $linkAlgorithm ?>"><?= $algorithm['name'] ?></a></span>
-                    <span class="properties">
-                        (<?= sprintf($l10n['created_note'], getTimeFrame($algorithm['age']),
-                            '<a href="' . $linkUser . '">' . $algorithm['username']) . '</a>' ?>)
-                    </span>
-                    <?php if (!empty($algorithm['description'])): ?>
-                        <span class="description"><?= skipDescription($algorithm['description']) ?></span>
-                    <?php endif ?>
-                </td>
-            </tr>
-        <?php endforeach ?>
-        <?php else: ?>
-            <tr>
-                <td><?= $l10n['no_algorithms'] ?></td>
-            </tr>
-        <?php endif ?>
-        </tbody>
-    </table>
-</div>
-<div class="col-md-4">
-    <!-- Last changes -->
-    <table class="table table-striped table-hover algorithms">
-        <thead>
-        <tr>
-            <th><?= $l10n['last_changes'] ?></th>
-        </tr>
-        </thead>
-        <tbody>
-        <?php if ($lastChanges): ?>
-        <?php foreach ($lastChanges as $algorithm):
-            $linkAlgorithm = url(['action' => 'view', 'aid' => $algorithm['aid']]);
-            $linkUser = url(['action' => 'user', 'uid' => $algorithm['uid']]);
-            ?>
-            <tr>
-                <td>
-                    <span class="name"><a href="<?= $linkAlgorithm ?>"><?= $algorithm['name'] ?></a></span>
-                    <span class="properties">
-                        (<?= sprintf($l10n['modified_note'], getTimeFrame($algorithm['modified']),
-                            '<a href="' . $linkUser . '">' . $algorithm['username']) . '</a>' ?>)
-                    </span>
-                    <?php if (!empty($algorithm['description'])): ?>
-                        <span class="description"><?= skipDescription($algorithm['description']) ?></span>
-                    <?php endif ?>
-                </td>
-            </tr>
-        <?php endforeach ?>
-        <?php else: ?>
-            <tr>
-                <td><?= $l10n['no_algorithms'] ?></td>
-            </tr>
-        <?php endif ?>
-        </tbody>
-    </table>
-</div>
-<div class="col-md-4">
-    <!-- Users with most algorithms -->
-    <table class="table table-striped table-hover algorithms">
-        <thead>
-        <tr>
-            <th><?= $l10n['diligent_users'] ?></th>
-        </tr>
-        </thead>
-        <tbody>
-        <?php if ($diligentUsers): ?>
-        <?php foreach ($diligentUsers as $user):
-            $linkUser = url(['action' => 'user', 'uid' => $user['uid']]);
-            ?>
-            <tr>
-                <td>
-                    <span class="name"><a href="<?= $linkUser ?>"><?= $user['username'] ?></a></span>
-                    <span class="properties">
-                        (<?= sprintf($l10n['user_created_note'], $user['algorithm_count']) ?>)
-                    </span>
-                </td>
-            </tr>
-        <?php endforeach ?>
-        <?php else: ?>
-            <tr>
-                <td><?= $l10n['no_users'] ?></td>
-            </tr>
-        <?php endif ?>
-        </tbody>
-    </table>
-</div>
+    <!-- HEADER -->
+    <div class="page-header">
+        <h1><?= $l10n['index'] ?>
+            <small><?= $l10n['all_algos'] ?></small>
+        </h1>
+    </div>
+    <!-- CONTENT -->
+    <div class="row">
+        <div class="col-md-4">
+            <!-- Latest algorithms -->
+            <table class="table table-striped table-hover algorithms">
+                <thead>
+                <tr>
+                    <th><?= $l10n['latest_algos'] ?></th>
+                </tr>
+                </thead>
+                <tbody>
+                <?php if ($latestAlgorithms): ?>
+                    <?php foreach ($latestAlgorithms as $algorithm):
+                        $linkAlgorithm = url(['action' => 'view', 'aid' => $algorithm['aid']]);
+                        $linkUser = url(['action' => 'user', 'uid' => $algorithm['uid']]);
+                        ?>
+                        <tr>
+                            <td>
+                                <?php if ($algorithm['age'] <= MAX_MINUTES_FOR_LABEL): ?>
+                                    <span class="label label-default"><?= $l10n['label_new'] ?></span>
+                                <?php endif ?>
+                                <span class="name"><a href="<?= $linkAlgorithm ?>"><?= $algorithm['name'] ?></a></span>
+                                <span class="properties">
+                                    (<?= sprintf($l10n['created_note'], getTimeFrame($algorithm['age']),
+                                        '<a href="' . $linkUser . '">' . $algorithm['username']) . '</a>' ?>)
+                                </span>
+                                <?php if (!empty($algorithm['description'])): ?>
+                                    <span class="description"><?= skipDescription($algorithm['description']) ?></span>
+                                <?php endif ?>
+                            </td>
+                        </tr>
+                    <?php endforeach ?>
+                <?php else: ?>
+                    <tr>
+                        <td><?= $l10n['no_algorithms'] ?></td>
+                    </tr>
+                <?php endif ?>
+                </tbody>
+            </table>
+        </div>
+        <div class="col-md-4">
+            <!-- Last changes -->
+            <table class="table table-striped table-hover algorithms">
+                <thead>
+                <tr>
+                    <th><?= $l10n['last_changes'] ?></th>
+                </tr>
+                </thead>
+                <tbody>
+                <?php if ($lastChanges): ?>
+                    <?php foreach ($lastChanges as $algorithm):
+                        $linkAlgorithm = url(['action' => 'view', 'aid' => $algorithm['aid']]);
+                        $linkUser = url(['action' => 'user', 'uid' => $algorithm['uid']]);
+                        ?>
+                        <tr>
+                            <td>
+                                <span class="name"><a href="<?= $linkAlgorithm ?>"><?= $algorithm['name'] ?></a></span>
+                                <span class="properties">
+                                    (<?= sprintf($l10n['modified_note'], getTimeFrame($algorithm['modified']),
+                                        '<a href="' . $linkUser . '">' . $algorithm['username']) . '</a>' ?>)
+                                </span>
+                                <?php if (!empty($algorithm['description'])): ?>
+                                    <span class="description"><?= skipDescription($algorithm['description']) ?></span>
+                                <?php endif ?>
+                            </td>
+                        </tr>
+                    <?php endforeach ?>
+                <?php else: ?>
+                    <tr>
+                        <td><?= $l10n['no_algorithms'] ?></td>
+                    </tr>
+                <?php endif ?>
+                </tbody>
+            </table>
+        </div>
+        <div class="col-md-4">
+            <!-- Users with most algorithms -->
+            <table class="table table-striped table-hover algorithms">
+                <thead>
+                <tr>
+                    <th><?= $l10n['diligent_users'] ?></th>
+                </tr>
+                </thead>
+                <tbody>
+                <?php if ($diligentUsers): ?>
+                    <?php foreach ($diligentUsers as $user):
+                        $linkUser = url(['action' => 'user', 'uid' => $user['uid']]);
+                        ?>
+                        <tr>
+                            <td>
+                                <span class="name"><a href="<?= $linkUser ?>"><?= $user['username'] ?></a></span>
+                                <span class="properties">
+                                    (<?= sprintf($l10n['user_created_note'], $user['algorithm_count']) ?>)
+                                </span>
+                            </td>
+                        </tr>
+                    <?php endforeach ?>
+                <?php else: ?>
+                    <tr>
+                        <td><?= $l10n['no_users'] ?></td>
+                    </tr>
+                <?php endif ?>
+                </tbody>
+            </table>
+        </div>
+    </div>
+<?php if (isset($__uid)): ?>
+    <div class="row">
+        <div class="col-md-4">
+            <!-- Own algorithms -->
+            <table class="table table-striped table-hover algorithms">
+                <thead>
+                <tr>
+                    <th><?= $l10n['my_algos'] ?></th>
+                </tr>
+                </thead>
+                <tbody>
+                <?php if (isset($my_algorithms) && $my_algorithms): ?>
+                    <?php foreach ($my_algorithms as $algorithm): $link = url(['action' => 'view', 'aid' => $algorithm['aid']]) ?>
+                        <tr>
+                            <td>
+                                <?php if ($algorithm['age'] <= MAX_MINUTES_FOR_LABEL): ?>
+                                    <span class="label label-default"><?= $l10n['label_new'] ?></span>
+                                <?php endif ?>
+                                <?php if (is_null($algorithm['date_publish'])): ?>
+                                    <span class="label label-info"><?= $l10n['private'] ?></span>
+                                <?php endif ?>
+                                <span class="name">
+                                    <a href="<?= $link ?>">
+                                        <?= $algorithm['name'] ? $algorithm['name'] : $l10n['untitled_algorithm'] ?>
+                                    </a>
+                                </span>
+                                <span class="properties">
+                                    (<?= sprintf($l10n['created_at'], getTimeFrame($algorithm['age'])) ?>)
+                                </span>
+                                <?php if (!empty($algorithm['description'])): ?>
+                                    <span class="description">
+                                        <?= skipDescription($algorithm['description']) ?>
+                                    </span>
+                                <?php endif ?>
+                            </td>
+                        </tr>
+                    <?php endforeach ?>
+                <?php else: ?>
+                    <tr>
+                        <td><?= $l10n['no_algorithms'] ?></td>
+                    </tr>
+                <?php endif ?>
+                </tbody>
+                <tfoot>
+                <tr>
+                    <td>(<a href="<?= url(['action' => 'user']) ?>"><?= $l10n['see_more'] ?></a>)</td>
+                </tr>
+                </tfoot>
+            </table>
+        </div>
+        <div class="col-md-4">
+            <!-- Last changes -->
+            <table class="table table-striped table-hover algorithms">
+                <thead>
+                <tr>
+                    <th><?= $l10n['my_last_changes'] ?></th>
+                </tr>
+                </thead>
+                <tbody>
+                <?php if (isset($my_changes) && $my_changes): ?>
+                    <?php foreach ($my_changes as $algorithm):
+                        $linkAlgorithm = url(['action' => 'view', 'aid' => $algorithm['aid']]);
+                        $linkUser = url(['action' => 'user', 'uid' => $algorithm['uid']]);
+                        ?>
+                        <tr>
+                            <td>
+                                <?php if (is_null($algorithm['date_publish'])): ?>
+                                    <span class="label label-info"><?= $l10n['private'] ?></span>
+                                <?php endif ?>
+                                <span class="name"><a href="<?= $linkAlgorithm ?>"><?= $algorithm['name'] ?></a></span>
+                                <span class="properties">
+                                    (<?= sprintf($l10n['modified_note'], getTimeFrame($algorithm['modified']),
+                                        '<a href="' . $linkUser . '">' . $algorithm['username']) . '</a>' ?>)
+                                </span>
+                                <?php if (!empty($algorithm['description'])): ?>
+                                    <span class="description"><?= skipDescription($algorithm['description']) ?></span>
+                                <?php endif ?>
+                            </td>
+                        </tr>
+                    <?php endforeach ?>
+                <?php else: ?>
+                    <tr>
+                        <td><?= $l10n['no_algorithms'] ?></td>
+                    </tr>
+                <?php endif ?>
+                </tbody>
+            </table>
+        </div>
+    </div>
+<?php endif ?>
